--- a/typescript/devcontainer.json
+++ b/typescript/devcontainer.json
@@ -13,6 +13,7 @@
 				"usernamehw.errorlens",
 				"vue.volar",
 				"vue.vscode-typescript-vue-plugin",
+				"yoavbls.pretty-ts-errors",
 				"yzhang.markdown-all-in-one"
 			],
 			"settings": {
