Install Vector and round up Ruby

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -22,4 +22,7 @@
     - { role: system-libraries, tags: ['system-libraries'] }
     - { role: tanka, tags: ['tanka', 'infrastructure'] }
     - { role: terraform, tags: ['terraform', 'infrastructure'] }
+    - { role: vector, tags: ['vector'] }
     - { role: vscode, tags: ['vscode'] }
+  vars_files:
+    - variables.yml
