Install the OpenSSL development lib
Used by multiple tools.

--- a/ansible/roles/system-libraries/tasks/main.yml
+++ b/ansible/roles/system-libraries/tasks/main.yml
@@ -11,6 +11,7 @@
       - tar
       - vim
       - zip
+      - "{{ openssl_dev_package_name }}"
       - "{{ gpg_package_name }}"
     state: present
 
