--- a/ansible/roles/node-js/tasks/main.yml
+++ b/ansible/roles/node-js/tasks/main.yml
@@ -16,15 +16,15 @@
 
 - name: Set VOLTA_HOME environment variable
   ansible.builtin.lineinfile:
-    dest: ~/.bashrc
-    line: 'export VOLTA_HOME=$HOME/.volta'
+    dest: ~/.profile
+    line: "export VOLTA_HOME=$HOME/.volta"
     state: present
     insertafter: EOF
 
 - name: Add Volta to PATH
   ansible.builtin.lineinfile:
-    dest: ~/.bashrc
-    line: 'export PATH=$PATH:$HOME/.volta/bin'
+    dest: ~/.profile
+    line: "export PATH=$PATH:$HOME/.volta/bin"
     state: present
     insertafter: EOF
 
